figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_named.snap
---
source: figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
main connect

USAGE:
    main connect [OPTIONS]

OPTIONS:
        --url <STRING> [Required]
            Server URL (required)
        --timeout <U32>
            Optional timeout


Error: missing required argument
   ╭─[ <usage>:1:9 ]
   │
 1 │ connect --url <url>
   │         ─────┬─────  
   │              ╰─────── Server URL (required)
───╯
